--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="calculator-grid">
+  <div class="kalkulator">
     <div class="output">
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
